Ajustes nos títulos dos capítulos

--- a/02_capitulo.qmd
+++ b/02_capitulo.qmd
@@ -1,4 +1,4 @@
-# Metodologia CRISP-DM
+# A Metodologia CRISP-DM
 
 Este capítulo apresenta a metodologia CRISP-DM (*Cross-Industry Standard
 Process for Data Mining*) [@ibm_crisp_dm], amplamente utilizada para estruturar
