--- a/05_capitulo.qmd
+++ b/05_capitulo.qmd
@@ -1,1 +1,732 @@
-# Sistema Quarto: Publicação Técnica Reprodutível
+# Capítulo 5 — RStudio e fluxo de trabalho
+
+Este capítulo dá o primeiro passo para um trabalho organizado e reproduzível
+com R: entender o RStudio, configurar o ambiente e adotar boas práticas desde o
+início. A ideia é que o leitor consiga estudar e produzir relatórios com
+autonomia, inclusive em contextos administrativos simples, como análises de
+vendas ou custos.
+
+::: {.callout-note icon="false"}
+## Objetivos do capítulo
+
+- Reconhecer o papel do RStudio como IDE para o R.
+- Navegar pela interface e usar os painéis principais.
+- Instalar e carregar pacotes corretamente.
+- Criar projetos e organizar pastas de forma reprodutível.
+:::
+
+::: {.callout-note icon="false"}
+## Pré-requisitos
+
+- Ter o R instalado no computador.
+- Acesso à internet para baixar o RStudio e instalar pacotes quando necessário.
+- Noções básicas de organização de arquivos e pastas.
+:::
+
+## Instalação do RStudio
+
+::: {.callout-note icon="false"}
+## Instalação do RStudio no Windows
+
+1. Acesse [https://posit.co/download/rstudio-desktop/](https://posit.co/download/rstudio-desktop/){target="_blank"}
+2. Role a página; normalmente o site detecta seu sistema e disponibiliza o
+   instalador logo abaixo de `2: Install RStudio`.
+3. Clique em `Download RStudio Desktop for Windows` se o sistema for Windows.
+4. Finalizado o download, clique duas vezes no arquivo e avance até concluir.
+:::
+
+::: {.callout-note icon="false"}
+## macOS/Linux
+
+Na mesma página de download, escolha o instalador do seu sistema. O fluxo é
+análogo ao do Windows: baixar, executar e concluir a instalação.
+:::
+
+Com o RStudio instalado, vamos entender o que ele é e por que um IDE facilita
+o trabalho de quem está começando.
+
+## O que é o RStudio e o que é um IDE
+
+O RStudio é um Ambiente de Desenvolvimento Integrado (IDE) voltado para a
+linguagem R. Em vez de abrir programas separados para escrever, executar e
+visualizar resultados, o IDE reúne tudo em uma única interface.
+
+::: {.callout-note icon="false"}
+## Conceito-chave: IDE
+
+Um IDE integra editor de texto, execução de código, ajuda, visualização de
+gráficos e organização de projetos. Isso reduz erros e acelera o aprendizado.
+:::
+
+Para quem está começando, a vantagem prática é simples: você escreve um script,
+executa no console e vê o resultado sem sair do mesmo ambiente.
+
+### Erros comuns e como resolver
+
+- Confundir RStudio com a linguagem R: lembre que são ferramentas diferentes.
+- Abrir o RStudio sem ter o R instalado: instale o R antes do IDE.
+- Ignorar o painel de ajuda: use a guia `Help` para consultar funções.
+
+### Checklist do leitor
+
+- [ ] Definir o que é um IDE.
+- [ ] Explicar por que o RStudio facilita o trabalho inicial.
+- [ ] Verificar que o R está instalado no computador.
+
+## R (linguagem) vs RStudio (IDE)
+
+![](https://d33wubrfki0l68.cloudfront.net/0b4d0569b2ddf6147da90b110fbb2a17653c8b08/f06f3/images/shutterstock/r_vs_rstudio_1.png){width="100%" fig-align="center"}
+
+O R é a linguagem (o "motor"). O RStudio é o painel de controle que facilita
+o uso desse motor. A analogia ajuda a lembrar que são instalados e usados em
+conjunto, mas com papéis diferentes.
+
+### Erros comuns e como resolver
+
+- Instalar apenas o RStudio e esperar que o R funcione: instale ambos.
+- Achar que o RStudio "substitui" o R: ele apenas organiza o trabalho.
+- Não saber onde digitar comandos: use o painel `Console` para executar.
+
+### Checklist do leitor
+
+- [ ] Diferenciar o que é o R e o que é o RStudio.
+- [ ] Explicar por que ambos devem estar instalados.
+- [ ] Indicar onde executar comandos no RStudio.
+
+# RStudio: Uma Visão Geral
+
+
+## Interface do RStudio
+
+Na primeira abertura, você verá quatro painéis. Eles funcionam em conjunto
+para escrever, executar, inspecionar objetos e visualizar resultados.
+
+![](img/05-cap/rstudio-panes.jpeg){fig-align="center"}
+
+Na figura acima, cada painel tem um papel. Vamos percorrê-los começando pelo
+`Source`, que é onde você escreve.
+
+
+
+
+## Painel: **Source**
+
+- O painel `Source` permite a visualização e edição de vários arquivos 
+relacionados a diversas linguagens, tais como: `.R`, `.qmd`,`.py`
+ou arquivos de texto gerais como `.txt` ou `.md.` 
+
+- Por padrão, é o painel superior esquerdo e pode ser iniciado abrindo 
+qualquer arquivo editável no RStudio. 
+
+- Cada arquivo adicional que for aberto será adicionado como uma nova guia 
+no painel.
+
+
+
+## Painel: **Console**
+
+- Esse painel fornece uma área para executar o código interativamente, isto
+é, você pode "conversar" diretamente com o interpretador da linguagem R.
+
+- Por padrão, está vinculado à linguagem R, mas ele também pode fornecer um
+console Python.
+
+
+
+## Painel: **Environment**
+
+**Guia `Environment`**
+
+- Essa guia exibe objetos R e Python ativos na sessão atual.
+
+- A barra de menus de `Environment` fornece carregamento ou salvamento de 
+  R workspaces, importação interativa de conjuntos de dados de arquivos de 
+  texto, Excel ou SPSS/SAS/Stata. 
+
+- Ela também exibe a memória usada pela sessão R ativa e um ícone 
+  de uma vassoura para remover todos os objetos ativos.
+
+
+
+## Painel: **Output**
+
+Por padrão, o painel `Output` é o painel inferior direito e 
+contém as seguintes guias: 
+
+**Guia `Files`**
+
+- Esta guia fornece uma exploração interativa da pasta de trabalho
+(*working directory*), ou seja, a pasta para a qual o R está direcionado.
+
+- Nesta guia, você pode adicionar, excluir, renomear e remover 
+arquivos e pastas, entre outras operações.
+
+
+**Guia `Help`**
+
+- O ícone `Home` exibe a página de ajuda geral, com links para 
+  Manuais e Referências sobre o R e RStudio.
+  
+- Exibe também a documentação dos pacotes. 
+
+
+**Guia `Viewer`**
+
+- Exibe conteúdos interativos tais como: gráficos interativos, aplicativos
+Shiny, páginas HTML geradas pelo Quarto, entre outros.
+
+  
+**Guia `Presentation`**
+
+- Esta guia é usada para exibir slides HTML gerados pelo 
+sistema Quarto.
+
+
+**Guia `Plots`**
+
+- Esta guia exibe imagens estáticas produzidas na sessão. 
+
+- Há setas para navegar entre gráficos mais antigos e mais recentes,
+zoom, um botão de exportação para salvar as imagens, um botão de
+exclusão de imagens e um ícone de vassoura que limpará todos os gráficos.
+
+
+**Guia `Packages`**
+
+- Esta guia permite visualizar os pacotes R instalados. 
+
+- Há uma barra para pesquisar a biblioteca atual de pacotes. 
+
+- Há também um botão para instalação e atualização de pacotes. 
+
+### Erros comuns e como resolver
+
+- Não saber onde digitar comandos: use o `Console` para executar.
+- Abrir um arquivo e não ver no `Source`: confirme se ele é editável.
+- Salvar arquivos fora do projeto: trabalhe sempre dentro da pasta do projeto.
+- Confundir `Files` com o sistema inteiro: ele mostra o *working directory*.
+
+### Checklist do leitor
+
+- [ ] Localizar `Source`, `Console`, `Environment` e `Output`.
+- [ ] Explicar o papel da guia `Files` como pasta de trabalho.
+- [ ] Abrir e alternar arquivos no `Source`.
+
+
+
+## Instalando Pacotes R: 
+
+### Usando a Guia Packages
+
+Para instalar pacotes usando a guia **Packages** no RStudio:
+
+- Clique na guia **Packages**.
+
+- Clique em **Install Packages**.
+
+- Digite o nome de cada pacote que deseja instalar separados 
+por um espaço ou vírgula na caixa de texto.
+
+- Copie os pacotes abaixo e cole na caixa de texto:
+
+```r
+tidyverse usethis 
+```
+
+- Clique em **Install** para iniciar a instalação
+
+
+![](img/05-cap/install_packages.jpeg){fig-align="center"}
+
+
+
+
+### Usando comandos
+
+- Uma forma alternativa de instalar pacotes é usando a linha de comando. 
+
+- Você pode usar o seguinte comando diretamente no console, em um script, 
+ou em um documento Quarto:
+
+```{r}
+#| eval: false
+#| echo: true
+#| message: false
+#| warning: false
+
+install.packages(c("tidyverse", "usethis"))
+```
+
+
+
+## Pacotes: atenção
+
+::: {.callout-note}
+## Instalação e carregamento de pacotes
+
+- Em um computador, você instala o pacote **uma única vez**.
+
+- Para usar o pacote em cada sessão, é preciso **carregá-lo** com `library()`.
+
+```{r}
+#| eval: false
+#| echo: true
+#| message: false
+#| warning: false
+
+# carrega os pacotes utilizados
+library(tidyverse)
+library(usethis)
+.
+.
+```
+:::
+
+
+
+::: {.callout-tip}
+## Conexão com a internet
+
+- Para instalar pacotes de R ou Python, é necessária uma
+**conexão ativa com a internet**.
+
+- Em caso de falhas de conexão, o download pode falhar. Nesse caso,
+repita a instalação.
+:::
+
+### Erros comuns e como resolver
+
+- Tentar usar `library()` sem instalar: rode `install.packages()` antes.
+- Esperar que a instalação funcione sem internet: verifique a conexão.
+- Instalar toda vez que abrir o RStudio: instale uma vez, carregue sempre.
+
+### Checklist do leitor
+
+- [ ] Indicar quando usar `install.packages()`.
+- [ ] Indicar quando usar `library()`.
+- [ ] Reconhecer que a instalação exige internet.
+
+## Configurações Básicas Recomendadas do RStudio
+
+Estas opções evitam mensagens e comportamentos confusos ao iniciar o RStudio
+em diferentes projetos.
+
+1. Abra o RStudio.
+
+2. Clique no menu "*Tools*" > "*Global Options*" > "*Basic*".
+
+3. **Desmarque** a opção: "*Restore most recently opened project at startup*".
+
+4. **Desmarque** a opção: "*Restore previously open source document at startup*".
+
+5. **Desmarque** a opção: "*Restore .Rdata into workspace at startup*".
+
+6. Na caixa à direita de "*Save workspace to .Rdata on exit:*", **selecione** 
+"*never*"
+
+7. Clique em "*Ok*" e, em seguida, em "*Apply*".
+
+![](img/05-cap/rstudio_config_basica.jpeg){fig-align="center" width="90%"}
+
+### Erros comuns e como resolver
+
+- Deixar o RStudio restaurar sessões antigas: desmarque as opções acima.
+- Salvar `.RData` automaticamente: escolha "*never*".
+- Reabrir arquivos de outro projeto sem perceber: confirme o projeto ativo.
+
+### Checklist do leitor
+
+- [ ] Desativar a restauração automática de projetos e arquivos.
+- [ ] Configurar “Save workspace to .Rdata” como “never”.
+- [ ] Verificar o projeto ativo no RStudio.
+
+
+
+
+# Projetos RStudio e reprodutibilidade
+
+Depois de conhecer a interface, o próximo passo para trabalhar com segurança
+é organizar seu trabalho em projetos. Isso evita confusões com arquivos e
+torna o seu estudo mais reprodutível. Por exemplo, um projeto pode reunir os
+dados, os scripts e os relatórios de uma análise simples de vendas.
+
+::: {.callout-note icon="false"}
+## Visão Geral
+
+- Cientistas e analistas de dados mantêm todos os arquivos de um projeto
+em uma única pasta, com subpastas organizadas (dados, scripts, relatórios).
+
+- Essa prática é tão comum que o RStudio oferece suporte direto por meio dos
+`Projects`.
+
+- Os *RStudio Projects* (em português, *Projetos RStudio*) tornam simples 
+organizar seus projetos em vários contextos, cada um com sua própria 
+pasta e documentos diversos.
+
+- Seja com R ou Python, criar um projeto ajuda a manter tudo no lugar certo.
+
+- Além disso, projetos reduzem problemas com caminhos absolutos. Você passa
+a usar caminhos **relativos**, ou seja, arquivos são encontrados com base na
+pasta do projeto, e não em caminhos longos do sistema.
+:::
+
+### Erros comuns e como resolver
+
+- Trabalhar sem projeto e "perder" arquivos: crie um projeto para cada trabalho.
+- Misturar arquivos de disciplinas diferentes: use uma pasta por disciplina.
+- Usar caminhos absolutos: prefira caminhos relativos dentro do projeto.
+
+### Checklist do leitor
+
+- [ ] Explicar por que projetos ajudam na reprodutibilidade.
+- [ ] Definir o que é um caminho relativo.
+- [ ] Adotar um projeto para cada trabalho.
+
+
+
+## Criando projetos no RStudio
+
+Os Projetos RStudio estão associados a pastas. Você pode criar:
+
+- Em uma nova pasta, que ainda não existe.
+
+- Em uma pasta existente, por exemplo, uma pasta que contém um 
+repositório clonado do GitHub.
+
+O caminho mais curto para criar um projeto no RStudio envolve:
+
+1. Clique no botão `Project`, em seguida, clique em `New Project`, 
+no canto superior direito do RStudio:
+
+![](img/05-cap/menu_projects.jpeg){fig-align="center" width="100%"}
+
+- Em seguida, clique em `New Directory`:
+
+![](img/05-cap/new_proj01.png){fig-align="center" width="80%"}
+
+
+2. Na janela seguinte selecione `New Project`:
+
+![](img/05-cap/new_proj2.png){fig-align="center" width="80%"}
+
+
+3. Escolha a pasta dentro da qual você criará a subpasta 
+**seunome_icd2025** (que será a pasta do projeto), 
+clicando no botão **Browse**. 
+
+::: {.callout-tip}
+## Importante! Nome da Pasta e do Projeto
+
+No caso de um exemplo hipotético chamado João Silva, o nome da subpasta 
+seria `joaosilva_icd2025`, tente seguir esse padrão e **não** utilize 
+acentos, espaços e caracteres especiais para nomear pastas, projetos 
+e arquivos. 
+:::
+
+4. Digite o nome do projeto (por exemplo, `joaosilva_icd2025`) no campo 
+de texto abaixo de **Directory Name** e clique na caixa **Create a git repository**:
+
+![](img/05-cap/new_project04.jpeg){fig-align="center" width="80%"}
+
+
+
+5. Clique em **Create Project** para criar o projeto. Em seguida, 
+você verá algo similar a seguinte imagem no RStudio:
+
+![](img/05-cap/projeto_criado.jpeg){fig-align="center" width="80%"}
+
+### Erros comuns e como resolver
+
+- Criar projetos com nomes confusos: use um padrão simples e sem espaços.
+- Salvar arquivos fora da pasta do projeto: confira a guia `Files`.
+- Esquecer de ativar o projeto ao abrir o RStudio: selecione no menu `Project`.
+
+### Checklist do leitor
+
+- [ ] Criar um projeto com nome padronizado.
+- [ ] Localizar a pasta do projeto na guia `Files`.
+- [ ] Reabrir o projeto pelo menu `Project`.
+
+
+
+
+## Projeto Criado
+
+Quando um novo projeto é criado, o RStudio:
+
+- Cria um arquivo de projeto (`joaosilva_icd2025.Rproj`) dentro 
+da pasta do projeto. 
+
+- Carrega o projeto no RStudio e exibe seu nome no menu 
+**Projects**.
+
+- Com um projeto criado, toda vez que abrir o RStudio, basta
+clicar em Project; logo abaixo aparece o nome do projeto. Clique no nome
+para abrir o projeto.
+
+### Erros comuns e como resolver
+
+- Abrir o RStudio e começar a trabalhar sem projeto: selecione o projeto ativo.
+- Guardar arquivos soltos na área de trabalho: mova para a pasta do projeto.
+- Esquecer o arquivo `.Rproj`: ele indica qual pasta é o projeto.
+
+### Checklist do leitor
+
+- [ ] Identificar o arquivo `.Rproj`.
+- [ ] Reabrir o projeto a partir do menu `Project`.
+- [ ] Reconhecer que o projeto define a pasta de trabalho.
+
+
+
+
+## Estrutura Recomendada para o Projeto RStudio Criado
+
+Para organizar adequadamente os arquivos de seus projetos envolvendo a 
+análise de dados, recomendamos que você adote a seguinte estrutura inicial
+de pastas para seu projeto:
+
+1. Primeiramente, vamos criar duas pastas principais:
+
+- **dados**: Para armazenar os conjuntos de dados do projeto.
+- **relatorios**: Para armazenar os relatórios Quarto elaborados.
+- **scripts**: Para armazenar os scripts R utilizados.
+
+2. Dentro da pasta **dados**, vamos criar duas subpastas:
+
+- **dados_brutos**: Para armazenar os dados originais, sem modificações.
+- **dados_limpos**: Para armazenar dados após limpeza e transformações.
+
+3. Dentro da pasta **relatorios**, vamos criar a subpasta:
+
+- **testes**: Para armazenar documentos Quarto de teste e experimentos.
+
+Esta estrutura fornece uma organização clara que separa dados de documentos 
+e também distingue entre dados brutos e processados (ou limpos, no 
+jargão de Ciência de Dados), seguindo boas práticas de reprodutibilidade.
+
+Para criar esta estrutura usando o RStudio:
+
+1. Na Guia `Files` do RStudio, clique no botão `New Folder` para criar 
+as pastas principais `dados`, `relatorios` e `scripts`:
+
+![](img/05-cap/criar_pastas.jpeg){fig-align="center" width="100%"}
+
+
+2. Navegue para dentro da pasta `dados` e crie as subpastas `dados_brutos` e `dados_limpos`.
+
+Considerando o caso do exemplo hipotético chamado João Silva, a 
+estrutura final do projeto ficaria assim:
+
+```
+joaosilva_icd2025/
+│
+├── dados/
+│   ├── dados_brutos
+│   └── dados_limpos
+|
+├── joaosilva_icd2025.Rproj
+|
+├── relatorios/
+│   └── testes
+└── scripts/
+```
+
+### Erros comuns e como resolver
+
+- Misturar dados brutos com dados limpos: use subpastas separadas.
+- Salvar relatórios fora de `relatorios`: mantenha o padrão.
+- Criar pastas com acentos e espaços: prefira nomes simples.
+
+### Checklist do leitor
+
+- [ ] Criar `dados/`, `relatorios/` e `scripts/`.
+- [ ] Separar `dados_brutos` e `dados_limpos`.
+- [ ] Justificar por que essa estrutura ajuda na reprodutibilidade.
+
+
+
+
+## Gerenciamento de Arquivos
+
+O RStudio suporta realce de sintaxe e outros recursos especializados 
+de edição de código para tipos de arquivos específicos:
+
+- Scripts R, Python, SQL e outros.
+
+- Documentos computacionais e científicos em Quarto, R Markdown e LaTeX.
+
+- Conteúdo da Web, como HTML e CSS.
+
+- E muitos mais.
+
+Ao criar um novo arquivo, lembre que documentos Quarto (`.qmd`) são a base
+do livro e dos relatórios reprodutíveis.
+
+
+
+### Menu `Files`
+
+- É possível criar um novo arquivo com `File -> New File` (por exemplo,
+`Quarto Document` para relatórios):
+
+![](https://docs.posit.co/ide/user/ide/guide/ui/images/system-files-menu.png){fig-align="center"}
+
+
+- Outra possibilidade é usar o ícone no canto superior esquerdo do 
+RStudio:
+
+![](img/05-cap/cria_arquivos.png){fig-align="center"}
+
+### Erros comuns e como resolver
+
+- Criar arquivos fora do projeto: verifique a guia `Files`.
+- Não salvar o arquivo após criar: use `Ctrl+S` ou `⌘+S`.
+- Criar um `.R` quando precisava de `.qmd`: escolha o tipo correto.
+
+### Checklist do leitor
+
+- [ ] Criar um arquivo pelo menu `File`.
+- [ ] Criar um `.qmd` para relatórios.
+- [ ] Localizar arquivos na guia `Files`.
+
+
+
+## Configurações opcionais (Windows)
+
+Se você usa Windows e deseja o Git Bash como terminal no RStudio, siga as
+etapas abaixo. Em macOS e Linux, o terminal padrão já é suficiente.
+
+::: {.callout-note icon="false"}
+## Terminal Git Bash no RStudio (Windows)
+
+Como o RStudio e o sistema Quarto fazem parte do fluxo de trabalho, é importante
+saber como acessar e usar o terminal Git Bash diretamente dentro 
+do RStudio:
+
+1. **Configurando o terminal Git Bash no RStudio**:
+
+- Abra o RStudio
+
+- Vá para "*Tools*" > "*Global Options*" > "*Terminal*".
+
+- No campo "*New terminals open with:*", selecione "*Git Bash*" no 
+menu suspenso.
+
+- Clique em "*Apply*" e depois em "*OK*"
+
+2. **Acessando o terminal Git Bash no RStudio**:
+
+- No painel inferior do RStudio, clique na guia "*Terminal*".
+
+- Um novo terminal Git Bash será aberto.
+
+- Se um terminal já estiver aberto, mas não for o Git Bash, clique 
+  no ícone "+" no canto superior direito do painel `Terminal` e 
+  selecione "*New Terminal*" para abrir um novo terminal Git Bash
+
+3. **Vantagens de usar o Git Bash dentro do RStudio**:
+
+- Mantém seu fluxo de trabalho dentro de um único ambiente.
+
+- Facilita a navegação entre edição de arquivos e execução de comandos Git.
+
+- Permite copiar e colar facilmente entre o editor e o terminal.
+
+- Evita a necessidade de alternar entre aplicativos diferentes.
+:::
+
+### Erros comuns e como resolver
+
+- Selecionar o terminal errado: verifique o campo "*New terminals open with:*".
+- Abrir um terminal antigo: use o botão "+" para abrir um novo.
+- Esperar esse ajuste em macOS/Linux: nesses sistemas, o terminal já é padrão.
+
+### Checklist do leitor
+
+- [ ] Configurar o Git Bash no RStudio (Windows).
+- [ ] Abrir um novo terminal no painel `Terminal`.
+- [ ] Reconhecer que em macOS/Linux esse ajuste não é necessário.
+
+
+
+
+# Atalhos essenciais
+
+Atalhos economizam tempo e reduzem erros. A lista abaixo é enxuta e organizada
+por propósito. Use os que fizerem sentido agora e volte a esta seção quando
+precisar ganhar velocidade.
+
+**Navegação (Windows/Linux | macOS | Função)**
+
+- `Ctrl+1` | `⌘+1` | Ir para o painel `Source`
+- `Ctrl+2` | `⌘+2` | Ir para o painel `Console`
+- `Ctrl+3` | `⌘+3` | Ir para o painel `Environment`
+- `Ctrl+4` | `⌘+4` | Ir para o painel `Output`
+- `Ctrl+.` | `⌘+.` | Navegar para seções/funções/chunks
+
+**Quarto e execução (Windows/Linux | macOS | Função)**
+
+- `Ctrl+Shift+K` | `⌘+Shift+K` | Renderizar o documento Quarto
+- `Ctrl+Alt+I` | `⌘+Option+I` | Inserir um novo chunk
+- `Ctrl+Enter` | `⌘+Enter` | Executar a linha ou chunk atual
+
+**Edição (Windows/Linux | macOS | Função)**
+
+- `Ctrl+Shift+M` | `⌘+Shift+M` | Inserir o pipe do tidyverse (`%>%`)
+- `Ctrl+Shift+.` | `⌘+Shift+.` | Inserir o pipe nativo do R (`|>`)
+- `Alt+-` | `Option+-` | Inserir o operador de atribuição (`<-`)
+- `Ctrl+Shift+C` | `⌘+Shift+C` | Comentar/descomentar a seleção
+
+**Console (Windows/Linux | macOS | Função)**
+
+- `Ctrl+L` | `⌘+L` | Limpar o console
+- `Esc` | `Esc` | Interromper a execução
+
+::: {.callout-tip}
+## Extras
+
+- `Ctrl+Shift+0` | `⌘+Shift+0` | Restaurar o layout padrão
+- `Tab` | `Tab` | Autocompletar comandos e objetos
+- `F1` | `F1` | Ajuda da função sob o cursor
+- `Alt+Shift+K` | `Option+Shift+K` | Abrir a lista completa de atalhos
+- `Ctrl+Alt+R` | `⌘+Option+R` | Executar todas as linhas/chunks do arquivo
+:::
+
+### Erros comuns e como resolver
+
+- Tentar memorizar tudo de uma vez: comece pelos de navegação e execução.
+- Usar atalhos sem saber o foco ativo: clique primeiro no painel desejado.
+- Ignorar a lista completa: use `Alt+Shift+K`/`Option+Shift+K`.
+
+### Checklist do leitor
+
+- [ ] Alternar entre `Source` e `Console`.
+- [ ] Renderizar um documento Quarto pelo atalho.
+- [ ] Interromper uma execução travada no console.
+
+## Exercícios
+
+1. Explique a diferença entre **R** e **RStudio** usando a analogia
+   motor/painel de controle.
+
+2. Identifique os quatro painéis principais do RStudio e descreva, em uma
+   frase, o papel de cada um.
+
+3. Defina o que é um IDE e dê um exemplo do fluxo "escrever -> executar -> ver
+   resultado".
+
+4. Explique quando usar `install.packages()` e quando usar `library()`.
+
+5. Ajuste as configurações básicas recomendadas do RStudio (restore/save) e
+   registre, em 3 a 4 linhas, por que essas opções ajudam em projetos.
+
+6. Crie um novo projeto no RStudio com um nome padronizado (sem espaços) e
+   explique o que é um **caminho relativo** e por que ele facilita a
+   reprodutibilidade.
+
+7. No projeto criado, gere as pastas `dados/`, `relatorios/` e `scripts/` e,
+   dentro de `dados/`, crie `dados_brutos/` e `dados_limpos/`. Apresente o
+   código R usado para criar as pastas.
+
+8. Crie um arquivo `.qmd` simples com um chunk que calcula a média de
+   `c(2, 4, 6, 8)` e renderize o documento. Informe o resultado obtido.
